# C-

CProject/: CMakeLists.txt
CProject/Text/: day1.c  day2.c
CProject/chapter_01/: 01_hello.c  2_printf.c
CProject/chapter_02/: 09_IOText.c  10_BinaryText.c  8_ConstantText.c  FloatDouble.c  double.c  limits.c  overflow.c
CProject/chapter_03/: 01_AriText.c  03_Arrytext.c  04_arrayExer.c  05_arryCopy.c  06_arry_rollback.c  07_arry_char.c  08_arry_more.c  09_arry_more1.c  10_arrymoreExer.c  11_arrymoreExer2.c  12_arryExer2.c  arrText.c
CProject/chapter_04/: 01_PointerText.c  02_PointerText.c  03_PointerText.c  04_PointerText.c  05_PointerText.c  06_PointerText.c  07_DoubePlointer.c  10_PointerArrayExer.c  11_PointerArrayExer1.c  12_PointerArrayExer2.c  13_PointerArrayExer3.c  14_PointArrayExer4.c  15_PointerArrayExer5.c  16_PointArray.c  17_CharArray.c  18_stringArray.c  19_PointerAndArry6.c  20_PointerAndArry7.c
CProject/chapter_05/: 01_FunctionDefine.c  02_FunctionDefine.c  03_FunctionDefine.c  04_Return.c  05_FunctionDefine.c  06_FunctionDefine.c  07_FuncionDefine.c  08_FuncionDecfine.c  09_FuncionDefine.c  10_MainArgs.c  11_ExitText.c  12_FuncionProtoType.c  13_FuncionProType1.c  14_VarableTransfer.c  15_ArgsTransfer.c  16_ArgsTranTransfer1.c  17_ArgsTranTransfer2.c  18_ArgsTransfer3.c  19_ArgsTransfer4.c  20_ArgsTransfer5.c  21_ArgsTransferExer.c  23_Recursion.c  24_VariableArgstest.c  25_PointerFunctionTest.c  26_PointerFunctionTest.c  27_FunctionPointer.c  28_CallBackFunctionTest.c  29_variableTest.c  30_variableTest.c  31_variableTest2.c  32_VariableTest3.c  33_constTest.c
CProject/chapter_06/: 01_structTest.c  02_structTest1.c  03_structPractice.c
CProjecta/: CMakeLists.txt
